welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:1: error: Missing closing brace `}' assumed here
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
^